--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -23,4 +23,4 @@ jobs:
         aws-region: ${{ secrets.AWS_REGION }}
     
     - name: Deploy to AWS S3
-      run: aws s3 sync . s3://kunalgithub-action-workflow
+      run: aws s3 sync ./build s3://kunalgithub-action-workflow
